# RAGent

./: .gitignore  NCA.PY  README.md  chunking_modules.py  conversation_collector.py  export.py  install.py  intent_classifier.py  intent_classifier_update.py  main.py  pyproject.toml  requirements.txt  train.py  trainer.py
AST adopt/: .gitignore  How.txt  README.md  requirements.txt
AST adopt/colbert_project/: colbert_encoder.py  colbert_rag.py  colbert_storage.py  colbert_training.py  late_interaction.py  main.py
AST adopt/colbert_project/data/documents/: doc1.txt  doc2.txt  doc3.txt  doc4.txt
adapters/: sup_ot_adapter.py  supcon_adapter.py
config/: __init__.py  settings.py
configs/: config.py  sup_ot.yaml  supcon.yaml
core/: chunking.py  document_loader.py  embedding.py  qdrant_storage.py  rag_system.py
data/: io.py  labels.py
nca_rag/: config.py  models.py  nca_adapter.py  retriever.py  train.py  trainer.py  vector_store.py
qdrant_storage/: meta.json
qdrant_storage/collection/documents/: storage.sqlite
ragent/: __init__.py  __main__.py  config.py  conversation_collector.py  inspect_db.py  llm_client.py  llm_server.py  main.py  pending.py  transcript.py  utils.py  vectordb.py
ragent/handlers/: __init__.py  session_end.py  stop.py  user_prompt_submit.py
ragent/models/: chunk.py  intent.py  vector.py
ragent/modules/: chunking_modules.py  embedding_modules.py  intent_classifying_modules.py  parsing_modules.py  retrieval_modules.py
tests/: test_conversation_collector.py  test_transcript.py
tests/fixtures/: sample_transcript.jsonl
