[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragent"
version = "0.1.0"
description = "RAG-based conversation indexer for Claude Code hooks"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["ragent*"]
