[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragent"
version = "0.1.0"
description = "RAG-based conversation indexer for Claude Code hooks"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "astchunk",
    "FlagEmbedding",
    "qdrant-client",
    "torch",
    "google-generativeai",
    "transformers==4.44.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["ragent*"]
